--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
    "name": "question-answer-platform",
    "version": "1.0.0",
-   "description": "A platform of questions and answers like Yahoo.",
+   "description": "A question and answer platform like Yahoo.",
    "main": "index.js",
    "scripts": {
       "test": "echo \"Error: no test specified\" && exit 1",
