--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
    "author": "Jennyffer de Morais",
    "license": "ISC",
    "dependencies": {
+      "body-parser": "^1.19.0",
+      "dotenv": "^10.0.0",
       "ejs": "^3.1.6",
-      "express": "^4.17.1"
+      "express": "^4.17.1",
+      "mysql2": "^2.2.5",
+      "sequelize": "^6.6.2"
    }
 }
